--- a/app/assets/pages/signup/signup.html
+++ b/app/assets/pages/signup/signup.html
@@ -1,3 +1,4 @@
+<link href="./assets/css/material-kit.css" rel="stylesheet"/>
 <div class="signup-page">
     <div class="wrapper">
 		<div class="header header-filter" style="background-image: url('assets/img/background-img.jpg'); background-size: cover; background-position: top center;">
