--- a/app/index.html
+++ b/app/index.html
@@ -40,9 +40,11 @@
 <body class="signup-page" ng-app="logbookweb">
 	<div ui-view class="" autoscroll="true"></div>
 	<script src="assets/js/app.js"></script>
+	<script src="assets/js/constants/menu.js"></script>
 	<script src="assets/pages/login/login.js"></script>
 	<script src="assets/pages/signup/signup.js"></script>
 	<script src="assets/pages/dashboard/dashboard.js"></script>
+	<script src="assets/pages/table/table.js"></script>
 
 
 	
@@ -62,6 +64,9 @@
 
 <!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
 <script src="./assets/js/material-kit.js" type="text/javascript"></script>
+
+<!--  PerfectScrollbar Library -->
+<script src="./assets/js/perfect-scrollbar.jquery.min.js"></script>
 
 
 
