added the first step for new entry

--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,8 @@
 	<script src="assets/pages/signup/signup.js"></script>
 	<script src="assets/pages/dashboard/dashboard.js"></script>
 	<script src="assets/pages/table/table.js"></script>
+	<script src="assets/pages/profile/profile.js"></script>
+	<script src="assets/pages/entry/entry.js"></script>
 
 
 	
