--- a/app/assets/pages/login/login.html
+++ b/app/assets/pages/login/login.html
@@ -6,42 +6,43 @@
 				<div class="row">
 					<div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3">
 						<div class="card card-signup">
-							<form class="form" method="" action="">
-								<div class="header header-primary text-center">
-									<div class="social-line">
-										<img src="assets/icons/logbook_white.png">
-									</div>
+							<div class="header header-primary text-center">
+								<div class="social-line">
+									<img src="assets/icons/logbook_white.png">
 								</div>
-								<p class="text-divider">Bitácora médica fácil y efectiva</p>
-								<div class="content">
+							</div>
+							<p class="text-divider">Bitácora médica fácil y efectiva</p>
+							<div class="content">
 
-									<div class="input-group">
-										<span class="input-group-addon">
-											<i class="material-icons">person_outline</i>
-										</span>
-											<input type="text" class="form-control" placeholder="Nombre de usuario..." required>
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="material-icons">person_outline</i>
+									</span>
+									<div class="form-group">
+										<input type="text" class="form-control " placeholder="Nombre de usuario..." ng-model="user.email" >
 									</div>
+								</div>
 
-									<div class="input-group">
-										<span class="input-group-addon">
-											<i class="material-icons">lock_outline</i>
-										</span>
-											<input type="password" placeholder="Contraseña..." class="form-control" required/>
-										<span class="material-input"></span>
+								<div class="input-group">
+									<span class="input-group-addon">
+										<i class="material-icons">lock_outline</i>
+									</span>
+									<div class="form-group">
+										<input type="password" placeholder="Contraseña..." class="form-control form-group" ng-model="user.password" >
 									</div>
 								</div>
-								<div class="footer text-center">
-									<a href="dashboard.html" class="btn btn-simple btn-primary btn-lg">Entrar</a>
-									<div class="footer row text-center">
-										<div class="col-xs-6">
-											<a href="#!/signup" class="btn btn-simple btn-default btn-sm">Nuevo usuario?</a>
-										</div>
-										<div class="col-xs-6">
-											<a href="#" class="btn btn-simple btn-default btn-sm">Contraseña?</a>
-										</div>
+							</div>
+							<div class="footer text-center">
+								<a ng-click="login()" class="btn btn-simple btn-primary btn-lg">Entrar</a>
+								<div class="footer row text-center">
+									<div class="col-xs-6">
+										<a href="#!/signup" class="btn btn-simple btn-default btn-sm">Nuevo usuario?</a>
+									</div>
+									<div class="col-xs-6">
+										<a href="#" class="btn btn-simple btn-default btn-sm">Contraseña?</a>
 									</div>
 								</div>
-							</form>
+							</div>
 						</div>
 					</div>
 				</div>
