starting to get the list

--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -17,9 +17,9 @@
                         </a>
                     </li>
                     <li class="active-pro">
-                        <a href="#">
+                        <a ng-click="logout()">
                             <i class="material-icons">error</i>
-                            <p>Reportar un error</p>
+                            <p>Reportar un error (logout)</p>
                         </a>
                     </li>
                 </ul>
@@ -70,7 +70,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#pablo" class="dropdown-toggle" data-toggle="dropdown">
+                                <a  class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="material-icons">person</i>
                                     <p class="hidden-lg hidden-md">Profile</p>
                                 </a>
