signup process started

--- a/app/assets/pages/signup/signup.html
+++ b/app/assets/pages/signup/signup.html
@@ -19,22 +19,27 @@
 										<span class="input-group-addon">
 											<i class="material-icons">person_outline</i>
 										</span>
+										<div class="form-group">
 											<input type="text" class="form-control" placeholder="Primer Nombre..." required>
+										</div>
 									</div>
 
 									<div class="input-group">
 										<span class="input-group-addon">
 											<i class="material-icons">mail_outline</i>
 										</span>
+										<div class="form-group">
 											<input type="text" class="form-control" placeholder="Correo..." required>
+										</div>
 									</div>
 
 									<div class="input-group">
 										<span class="input-group-addon">
 											<i class="material-icons">lock_outline</i>
 										</span>
-										
+										<div class="form-group">
 										<input type="password" placeholder="Contraseña..." class="form-control" required>
+									</div>
 									
 									</div>
 								</div>
