--- a/app/index.html
+++ b/app/index.html
@@ -44,12 +44,12 @@
    <script>
     // Initialize Firebase en base de datos de PRUEBA!!
     var config = {
-      apiKey: "AIzaSyBRJBXEK8PY-_LPTozzkwgn6YIsoadltG0",
-      authDomain: "lunchera-tests.firebaseapp.com",
-      databaseURL: "https://lunchera-tests.firebaseio.com",
-      projectId: "lunchera-tests",
-      storageBucket: "lunchera-tests.appspot.com",
-      messagingSenderId: "152064789080"
+      apiKey: "AIzaSyBY4pyhL6cEfHncCReGAptG63G9k_Wt5T4",
+      authDomain: "logbook-pruebas.firebaseapp.com",
+      databaseURL: "https://logbook-pruebas.firebaseio.com",
+      projectId: "logbook-pruebas",
+      storageBucket: "logbook-pruebas.appspot.com",
+      messagingSenderId: "331764203402"
     };
     firebase.initializeApp(config);
   </script>
