working on making a new entry

--- a/app/index.html
+++ b/app/index.html
@@ -61,6 +61,10 @@
 	<script src="assets/js/app.js"></script>
 	<script src="assets/js/constants/menu.js"></script>
   <script src="assets/js/constants/cirugias.js"></script>
+  <script src="assets/js/constants/directrices.js"></script>
+  <script src="assets/js/constants/universidades.js"></script>
+  <script src="assets/js/constants/especialidades.js"></script>
+  <script src="assets/js/constants/diagnosticos.js"></script>
 	<script src="assets/pages/login/login.js"></script>
 	<script src="assets/pages/signup/signup.js"></script>
 	<script src="assets/pages/dashboard/dashboard.js"></script>
