--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,12 @@
     <!-- Firebase -->
     <script src="https://www.gstatic.com/firebasejs/4.5.0/firebase.js"></script>
 
+
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/2.3.0/angularfire.min.js"></script>
+
+    <script src="../node_modules/angular-sweetalert-2/dist/angular-sweetalert2.min.js"></script>
+    <script src="../node_modules/sweetalert2/dist/sweetalert2.all.min.js"></script>
 
    <!--  Material Dashboard CSS    -->
    <link href="./assets/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
