--- a/app/assets/pages/entry/entry.html
+++ b/app/assets/pages/entry/entry.html
@@ -198,7 +198,7 @@
                                 </div>
                                 <p>La Cirugía Fue</p>
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('tipoCir',1)">
                                 <label class="custom-control custom-radio" >                
                                     <input id="radio1" name="radio" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto align-middle">
@@ -207,7 +207,7 @@
                                     </figure>                                        
                                 </label>          
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('tipoCir',2)">
                                 <label class="custom-control custom-radio">                
                                     <input id="radio2" name="radio" type="radio" class="custom-control-input">
                                     <figure class="mx-auto">
@@ -216,7 +216,7 @@
                                     </figure>                                        
                                 </label>
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('tipoCir',3)">
                                 <label class="custom-control custom-radio">                
                                     <input id="radio3" name="radio" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto">
@@ -232,7 +232,7 @@
                             <div class="card-header2 card-header-inline" data-background-color="green">
                                 <p>Tu Rol Fue</p>
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('rol',1)">
                                 <label class="custom-control custom-radio">                
                                     <input id="radio4" name="radio2" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto align-middle">
@@ -242,7 +242,7 @@
                                     <span class="custom-control-indicator"></span>                
                                 </label>      
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('rol',2)">
                                 <label class="custom-control custom-radio">                
                                     <input id="radio5" name="radio2" type="radio" class="custom-control-input">
                                     <figure class="mx-auto">
@@ -252,7 +252,7 @@
                                     <span class="custom-control-indicator"></span>
                                 </label>
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('rol',3)">
                                 <label class="custom-control custom-radio">                
                                     <input id="radio6" name="radio2" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto">
@@ -560,7 +560,7 @@
                             <div class="card-header2 card-header-inline" data-background-color="green">
                                 <p>Mi desempeño en esta cirugía fue:</p>
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('feeling',1)">
                                 <label class="custom-control custom-radio" >                
                                     <input id="radio7" name="radio" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto align-middle">
@@ -569,7 +569,7 @@
                                     </figure>                                        
                                 </label>          
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('feeling',3)">
                                 <label class="custom-control custom-radio">                
                                     <input id="radio8" name="radio" type="radio" class="custom-control-input">
                                     <figure class="mx-auto">
@@ -578,7 +578,7 @@
                                     </figure>                                        
                                 </label>
                             </div>
-                            <div class="card-content col-xs-4">
+                            <div class="card-content col-xs-4" ng-click="setConditional('feeling',5)">
                                 <label class="custom-control custom-radio">                
                                     <input id="radio9" name="radio" type="radio" class="custom-control-input">
                                     <figure class="figure mx-auto">
