--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
 	<script src="assets/pages/table/table.js"></script>
 	<script src="assets/pages/profile/profile.js"></script>
 	<script src="assets/pages/entry/entry.js"></script>
+  <script src="assets/pages/detail/detail.js"></script>
 
 
 	
