--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,8 @@
    <link href="./assets/css/material-dashboard.css?v=1.2.0" rel="stylesheet" />
    <!--  CSS for Demo Purpose, don't include it in your project     -->
    <link href="./assets/css/demo.css" rel="stylesheet" />
+
+   <link href="./assets/css/custom.css" rel="stylesheet" />
    
 
    <!--  PerfectScrollbar Library -->
@@ -69,6 +71,7 @@
   <script src="assets/js/constants/universidades.js"></script>
   <script src="assets/js/constants/especialidades.js"></script>
   <script src="assets/js/constants/diagnosticos.js"></script>
+  <script src="assets/js/constants/iconos.js"></script>
 	<script src="assets/pages/login/login.js"></script>
 	<script src="assets/pages/signup/signup.js"></script>
 	<script src="assets/pages/dashboard/dashboard.js"></script>
