starting with graphs using chartist

--- a/app/assets/pages/detail/detail.html
+++ b/app/assets/pages/detail/detail.html
@@ -89,11 +89,11 @@
                 </div>
             </div>
         </nav>
-        <div class="circular-container">
+        <!-- <div class="circular-container">
             <div class="circle circular-loader1">
               <div class="circle circular-loader2">    </div>
             </div>
-          </div>
+          </div> -->
         <div class="content">
             <div class="container-fluid">
                 <div class="row">
@@ -238,16 +238,16 @@
                                         <tr ng-if="entrada.opcionales.incisionToracotomia">
                                             <td>Realicé la Toracotomía</td>
                                         </tr>
-                                        <tr ng-if="entrada.opcionales.incisionLaparotomía">
+                                        <tr ng-if="entrada.opcionales.incisionLaparotomia">
                                             <td>Realicé la Laparotomía</td>
                                         </tr>
                                         <tr ng-if="entrada.opcionales.cierreCervicotomia">
                                             <td>Cerré la Cervicotomía</td>
                                         </tr>
-                                        <tr ng-if="entrada.opcionales.cierreToracotomía">
+                                        <tr ng-if="entrada.opcionales.cierreToracotomia">
                                             <td>Cerré la Toracotomía</td>
                                         </tr>
-                                        <tr ng-if="entrada.opcionales.cierreLaparotomía">
+                                        <tr ng-if="entrada.opcionales.cierreLaparotomia">
                                             <td>Cerré la Laparotomía</td>
                                         </tr>
                                         <tr ng-if="entrada.opcionales.anastomosisVisceral">
