--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,10 @@
 
 <body class="signup-page" ng-app="logbookweb">
 	<div ui-view class="" autoscroll="true"></div>
+  
+  <script src="assets/js/chartist.min.js"></script>
+  <script src="assets/js/demo.js"></script>
+
 	<script src="assets/js/app.js"></script>
 	<script src="assets/js/constants/menu.js"></script>
   <script src="assets/js/constants/cirugias.js"></script>
