registro esta listo

--- a/app/assets/pages/login/login.html
+++ b/app/assets/pages/login/login.html
@@ -39,7 +39,7 @@
 										<a href="#!/signup" class="btn btn-simple btn-default btn-sm">Nuevo usuario?</a>
 									</div>
 									<div class="col-xs-6">
-										<a href="#" class="btn btn-simple btn-default btn-sm">Contraseña?</a>
+										<a ng-click="resetPassword()" class="btn btn-simple btn-default btn-sm">Contraseña?</a>
 									</div>
 								</div>
 							</div>
