--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
 	<script src="assets/pages/profile/profile.js"></script>
 	<script src="assets/pages/entry/entry.js"></script>
   <script src="assets/pages/detail/detail.js"></script>
+  <script src="assets/pages/error/error.js"></script>
 
 
 	
