--- a/app/assets/pages/dashboard/dashboard.html
+++ b/app/assets/pages/dashboard/dashboard.html
@@ -72,7 +72,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a  class="dropdown-toggle" data-toggle="dropdown">
+                                <a  class="dropdown-toggle" data-toggle="dropdown" ng-click="subirDirectrices()">
                                     <i class="material-icons">person</i>
                                     <p class="hidden-lg hidden-md">Profile</p>
                                 </a>
