--- a/app/assets/pages/entry/entry.html
+++ b/app/assets/pages/entry/entry.html
@@ -110,12 +110,9 @@
                             </div>
                         
                             <div class="form-control-hover card-footer2">
-                                <div class="form-control dropdown-toggle" id="datetimepicker1" required>
-                                    <form class="" method="post">
-                                         <!-- Date input -->                                           
-                                        <input class="form-control dropdown-toggle" id="date" name="date" placeholder="DD/MM/YYY" type="text"/>  
-                                    </form> 
-                                </div>
+                                <div class="form-group card-footer2">
+                                    <input type="date" class="form-control" ng-model="entrada.fecha"/>
+                                </div> 
                             </div>
                         </div>
                     </div>
@@ -155,6 +152,21 @@
                             <div class="form-control-hover card-footer2">
                                 <select class="form-control dropdown-toggle" id="" required ng-model="entrada.profesor">
                                     <option ng-repeat="profesor in profesores | orderBy:'-nombreLargo':true" id="prof{{profesor.id}}" value="{{profesor.id}}">{{profesor.nombreLargo}}</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-3">
+                        <div class="card card-stats">
+                            <div class="card-header2" data-background-color="orange">
+                                <i class="material-icons">timeline</i><p>Año de residencia:</p>
+                            </div>
+                            <div class="form-control-hover card-footer2">
+                                <select class="form-control dropdown-toggle" required ng-model="entrada.anores" ng-value="entrada.anores">
+                                    <option id="anores1" value=1>1</option>
+                                    <option id="anores2" value=2>2</option>
+                                    <option id="anores3" value=3>3</option>
+                                    <option id="anores4" value=4>4</option>
                                 </select>
                             </div>
                         </div>
